tests/language_modules/16_control_flow_edges/valid/case_all_branches_return.vf
module Control.CaseReturn

function score(choice: Integer) returns Integer
is
    case choice is
        when 1 =>
            return 10
        when 2 =>
            return 20
        default =>
            return 0
    end case
end score

procedure main()
is
    check score(2) = 20
end main

end Control.CaseReturn