tests/language_modules/16_control_flow_edges/invalid_semantics/case_missing_return_branch.vf
module Control.CaseMissingReturn

function score(choice: Integer) returns Integer
is
    case choice is
        when 1 =>
            return 10
        default =>
            check choice != 1
    end case
end score

end Control.CaseMissingReturn